# pr-clean

./: .pr_clean.yml.example  README.md  action.yml  pyproject.toml
pr_clean/: __init__.py  cli.py  config.py  github_client.py  patterns.py  reporter.py  scanner.py  stripper.py
tests/: __init__.py  test_config.py  test_patterns.py  test_scanner.py  test_stripper.py
tests/fixtures/: sample_pr_body.md
